Fixed Service Bug

--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApi-20170301073103.mdf;Initial Catalog=aspnet-WebApi-20170301073103;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Connection" connectionString="Data Source=PA\LOCALSERVER;Initial Catalog=iProperty;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="Connection" connectionString="Data Source=PA\LOCALSERVER;Initial Catalog=iProperty;Integrated Security=True" providerName="System.Data.SqlClient" /> -->
+   <add name="Connection" connectionString="Data Source=PA\SqLEXPRESS;Initial Catalog=iProperty;Integrated Security=True" providerName="System.Data.SqlClient" />
+ 
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
