--- a/webApp/webApp.csproj
+++ b/webApp/webApp.csproj
@@ -211,6 +211,7 @@
     <TypeScriptCompile Include="src\app\app.routing.ts" />
     <TypeScriptCompile Include="src\app\contact\contact.component.ts" />
     <TypeScriptCompile Include="src\app\home\home.component.ts" />
+    <TypeScriptCompile Include="src\app\app.Person.ts" />
     <TypeScriptCompile Include="src\app\login\login.component.ts" />
     <TypeScriptCompile Include="src\app\navbar\navbar.component.ts" />
     <TypeScriptCompile Include="src\app\search\search.component.ts" />
